--- a/HTML5Application/public_html/css/estilo.css
+++ b/HTML5Application/public_html/css/estilo.css
@@ -21,10 +21,12 @@ html, body {
     font-size: 2em;
     color: black;
     text-transform: uppercase;
+    padding-left: 0.5em;
 }
 
 .team-name:hover {
-    text-decoration: none;
+    color: blue;
+    text-decoration:none;
 }
 
 nav {
@@ -56,10 +58,6 @@ nav .nav-link:hover {
 
 .partidos {
     padding: 10em;
-}
-
-.prueba {
-
 }
 
 .prueba2 {
