--- a/HTML5Application/public_html/css/estilo.css
+++ b/HTML5Application/public_html/css/estilo.css
@@ -45,8 +45,7 @@ nav .nav-link {
 }
 
 nav .nav-link:hover {
-    color: #6A9B04;
-    text-decoration: underline;
+    color: #000000;
 }
 
 .header-text {
