--- a/HTML5Application/public_html/css/estilo.css
+++ b/HTML5Application/public_html/css/estilo.css
@@ -85,8 +85,17 @@ footer p {
     width: 5em;
 }
 
+.logo-nosotros {
+    height:20em;
+    width:16em;
+}
+
 .horizontal-panel-1 {
     background: linear-gradient(to bottom right, #0E3D8C, #131574);
     color: white;
     padding: 3em 1.5em 3em 1.5em;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
 }
