--- a/HTML5Application/public_html/css/estilo2.css
+++ b/HTML5Application/public_html/css/estilo2.css
@@ -3,7 +3,7 @@ html, body {
 } 
 
 .encabezado {
-	background: url("../img/fondo1.png") no-repeat;
+	background: url("../img/fondo2.png") no-repeat;
 	background-size: cover;
     height: 43em;
     padding: 2em 1em;
@@ -37,7 +37,7 @@ nav {
 
 nav .nav-link {
     font-size: 2em;
-    color: #00e600;
+    color: white;
     font-weight: 700;
     letter-spacing: 0.15em;
     text-transform: uppercase;
@@ -50,7 +50,7 @@ nav .nav-link {
 }
 
 nav .nav-link:hover {
-    color: white;
+    color: #a6a6a6;
 }
 
 .header-text {
@@ -102,6 +102,7 @@ footer p {
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
+	background-color: red;
 }
 
 #fase-final li {
